wiki/content/specifications/kbl/v25/classes/component_occurrence.md
---
title: Component_occurrence
toc: false
type: specs
date: "2018-07-04"
draft: false
specification: KBL
version: 2.5
documentType: "Recommendation"
elementType: Class
classes:
  - Component_occurrence
menu_name: kbl-2.5
---
<p>A Component_occurrence is the occurrence of a Component in a module part list.</p>

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | 3_Part_structure |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [Changed_element]({{< relref "changed_element.md" >}})<br/> [Connection_or_occurrence]({{< relref "connection_or_occurrence.md" >}})<br/> [Reference_element]({{< relref "reference_element.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** | [Fuse_occurrence]({{< relref "fuse_occurrence.md" >}}), [Specified_component_occurrence]({{< relref "specified_component_occurrence.md" >}}) |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|Id | [String]({{< relref "string.md" >}}) | 1 | <p>The id specifies the identifier of the Component.</p> | [Component_occurrence]({{< relref "component_occurrence.md" >}}) |
|Alias_id | [Alias_identification]({{< relref "alias_identification.md" >}}) | 0..* | <p>The alias_id specifies additional identifiers for the Component.</p> | [Component_occurrence]({{< relref "component_occurrence.md" >}}) |
|Description | [String]({{< relref "string.md" >}}) | 0..1 | <p>The description specifies additional information about the object.</p> | [Component_occurrence]({{< relref "component_occurrence.md" >}}) |
|Localized_description | [Localized_string]({{< relref "localized_string.md" >}}) | 0..* | <p> The description specifies additional information about the object. The Localized_description provides the possibility to define descriptions for different language codes.       </p> | [Component_occurrence]({{< relref "component_occurrence.md" >}}) |

## Outgoing Relations
|    Type  |   Role   |   Mult.   |   Mult.   |   Description   |
|----------|----------|-----------|-----------|-----------------|
| [Installation_instruction]({{< relref "installation_instruction.md" >}}) | Installation_information | 0..* | 1 |  |
| [Component]({{< relref "component.md" >}}) | Part | 1 | 1..* |  |
| [Component_pin_map]({{< relref "component_pin_map.md" >}}) | Component_pin_maps | 0..* | 1 | The <i>Component_pin_map</i> used for this <i>Component_occurrence.</i> |
| [Mounting_element]({{< relref "mounting_element.md" >}}) | Mounting | 0..* | 0..* |  |
##  Incoming Relations
|    Type  |   Mult.  |   Role    |   Mult.   |   Description  |
|----------|----------|-----------|-----------|----------------|
| [Specified_component_occurrence]({{< relref "specified_component_occurrence.md" >}}) | 0..* | Related_occurrence | 1..* |  |
